--- a/Home.css
+++ b/Home.css
@@ -24,7 +24,7 @@ Body {
 }
 
 #output{
-	padding: 10px; width:80%;background: rgba(255,255,255,0.8);border-radius: 15px;
+	padding: 10px; width:80%;background: rgba(0, 255, 255, 0.8);border-radius: 15px;
 }
 
 #Name {
@@ -45,4 +45,9 @@ Body {
 
 #blue {
     color: cyan;
+}
+
+.room_name {
+    font-size: 25px;
+    Color: red;
 }
